<?xml version="1.0"?>
<package>
  <name>marathon_achievements</name>
  <version>0.1.2</version>
  <description>The marathon_achievements package</description>

  <maintainer email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</maintainer>


  <license>MIT</license>


  <author email="pulidofentanes@gmail.com">Jaime Pulido Fentanes</author>
  <author email="cburbridge@gmail.com">Chris Burbridge</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
